# in3110

./: README.md
assignment1/: gitconflict.txt  less_friendly_greeting.txt  myfirstcommit.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/: README.md  profile-report.md  pyproject.toml  timing-report.txt
assignment3/instapy/: cli.py  cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  requires.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py  wiki_race_challenge.py
assignment4/tests/: test_fetch_player_statistics.py
assignment5/: README.md  app.py  requirements.txt  strompris.py
assignment5/docs/: conf.py  index.rst  strompris.rst
assignment5/docs/_build/doctrees/: app.doctree  environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  app.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/docs/_build/html/_sources/: app.rst.txt  index.rst.txt
assignment5/templates/: strompris.html
